add shop features

--- a/client/src/material-theme.scss
+++ b/client/src/material-theme.scss
@@ -1,4 +1,3 @@
-
 // Include theming for Angular Material with `mat.theme()`.
 // This Sass mixin will define CSS variables that are used for styling Angular Material
 // components according to the Material 3 design spec.
@@ -8,14 +7,16 @@
 
 html {
   height: 100%;
-  @include mat.theme((
-    color: (
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
-    ),
-    typography: Roboto,
-    density: 0,
-  ));
+  @include mat.theme(
+    (
+      color: (
+        primary: mat.$azure-palette,
+        tertiary: mat.$blue-palette,
+      ),
+      typography: Roboto,
+      density: 0,
+    )
+  );
 }
 
 body {
@@ -34,4 +35,43 @@ body {
   // Reset the user agent margin.
   margin: 0;
   height: 100%;
+}
+
+:root {
+  @include mat.button-overrides(
+    (
+      filled-container-shape: '6px',
+      outlined-container-shape: '6px',
+    )
+  );
+  @include mat.badge-overrides(
+    (
+      background-color: blue,
+    )
+  );
+  @include mat.dialog-overrides(
+    (
+      container-shape: '6px',
+    )
+  );
+}
+
+.snack-error {
+  @include mat.snack-bar-overrides(
+    (
+      button-color: white,
+      container-color: red,
+      supporting-text-color: white,
+    )
+  );
+}
+
+.snack-success {
+  @include mat.snack-bar-overrides(
+    (
+      button-color: white,
+      container-color: green,
+      supporting-text-color: white,
+    )
+  );
 }
